Added Recipe Pages in recipes directory and links to recipes in index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        
+        <p><a href="./recipes/air-fryer-hamburgers.html">Air Fryer Hamburgers</a></p>
+
+        <p><a href="./recipes/grilled-cheese-sandwich.html">Grilled Cheese Sandwich</a></p>
+
+        <p><a href="./recipes/lasagna.html">Lasagna</a></p>
+
+        <p><a href="./recipes/seared-ahi-tuna-steaks.html">Seared Ahi Tuna Steaks</a></p>
     </body>
 </html>
