Added recipe page content, with description, ingredients and directions

--- a/recipes/seared-ahi-tuna-steaks.html
+++ b/recipes/seared-ahi-tuna-steaks.html
@@ -7,5 +7,45 @@
     </head>
     <body>
         <h1>Seared Ahi Tuna Steaks</h1>
+        <img src="https://www.allrecipes.com/thmb/rGs4ZpanPC6awzhx6SnHI-IVlsg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/160099-seared-ahi-tuna-steaks-DDMFS-4x3-26f4691e91bd434e9d96c1c601608cbc.jpg" alt="Seared ahi tuna steaks image">
+
+        <h2>Description</h2>
+        <p>This is an elegantly simple way to cook ahi tuna steaks that any restaurant would be jealous of! Serve with soy sauce or your favorite dipping sauce.</p>
+
+        <h2>Ingredients</h2>
+        <p>
+            <ul>
+                <li>2 (5 ounce) ahi tuna steaks</li>
+                <li>1 teaspoon kosher salt</li>
+                <li>¼ teaspoon cayenne pepper (Optional)</li>
+                <li>½ tablespoon butter</li>
+                <li>2 tablespoons olive oil</li>
+                <li>1 teaspoon whole peppercorns</li>
+            </ul>
+        </p>
+
+        <h2>Directions</h2>
+        <p>
+            <ol>
+                <li><strong>Step 1</strong></li>
+                <p>Pat tuna steaks dry and season on both sides with salt and cayenne pepper.</p>
+                <img src="https://www.allrecipes.com/thmb/7aEApc6DC-UzFOJNqossfQHmyBU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/160099-Seared-Ahi-Tuna-Steaks-mfs-Steps-002-7ca46553da924f38bae6d6c21ea5ed15.jpg" alt="Four tuna steaks on a cutting board with seasonings in a bowl and on top of the tuna steasks">
+                <li><strong>Step 2</strong></li>
+                <p>Melt butter in a skillet over medium-high heat.</p>
+                <img src="https://www.allrecipes.com/thmb/LcYQrd219go5gdHSUwtcn8oypJo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/160099-Seared-Ahi-Tuna-Steaks-mfs-Steps-003-cbfc959d084d415194f2637d9bde9cdf.jpg" alt="Overhead view of butter melting in a pan">
+                <li><strong>Step 3</strong></li>
+                <p>Add olive oil and pepper corns; cook until peppercorns soften and pop, about 5 minutes.</p>
+                <img src="https://www.allrecipes.com/thmb/4ffQtPizfSjO7hVALTpYTXRQJYw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/160099-Seared-Ahi-Tuna-Steaks-mfs-Steps-006-e176e01a91dc49fe9fe127217a649523.jpg" alt="Overhead view of pan with melted butter and peppercorns">
+                <li><strong>Step 4</strong></li>
+                <p>Gently place seasoned tuna in the skillet and cook to desired doneness, anywhere from 30 seconds to 1 1/2 minutes per side.</p>
+                <img src="https://www.allrecipes.com/thmb/UThXLjOmN1gnnDLqD6PU7cwX1_w=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/160099-Seared-Ahi-Tuna-Steaks-mfs-Steps-008-cb31be1fbc174a6ba4a4f010648ba699.jpg" alt="Overhead view of cooked tuna steaks in a pan">
+                <li><strong>Step 5</strong></li>
+                <p>Slice tuna into 1/4-inch thick slices to serve.</p>
+                <img src="https://www.allrecipes.com/thmb/OZOxlySab1rJuCObfTtpmAmZ7yI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/160099-Seared-Ahi-Tuna-Steaks-mfs-Steps-009-0435a34a1aa444bfb521da997f24f48d.jpg" alt="Platter of fifteen cooked tuna steaks">
+                <li><strong>Step 6</strong></li>
+                <p>Enjoy!</p>
+                <img src="https://www.allrecipes.com/thmb/rGs4ZpanPC6awzhx6SnHI-IVlsg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/160099-seared-ahi-tuna-steaks-DDMFS-4x3-26f4691e91bd434e9d96c1c601608cbc.jpg" alt="several medium rare seared tuna steaks are sliced on a blue and white platter.">
+            </ol>
+        </p>
     </body>
 </html>
