Added link to return to index page in every recipe page

--- a/recipes/air-fryer-hamburgers.html
+++ b/recipes/air-fryer-hamburgers.html
@@ -35,5 +35,9 @@
                 <p>Air-fry patties for 7 minutes, flipping halfway through, for medium doneness. For well done, air-fry for an additional 2 minutes.</p>
             </ol>
         </p>
+
+        <p>
+            <a href="../index.html">Return to the index</a>
+        </p>
     </body>
 </html>
