--- a/recipes/grilled-cheese-sandwich.html
+++ b/recipes/grilled-cheese-sandwich.html
@@ -30,5 +30,9 @@
                 <p>Cook until lightly browned on one side; flip over and continue cooking until cheese is melted. Repeat with remaining 2 slices of bread, butter, and slice of cheese.</p>
             </ol>
         </p>
+
+        <p>
+            <a href="../index.html">Return to the index</a>
+        </p>
     </body>
 </html>
