--- a/recipes/seared-ahi-tuna-steaks.html
+++ b/recipes/seared-ahi-tuna-steaks.html
@@ -47,5 +47,9 @@
                 <img src="https://www.allrecipes.com/thmb/rGs4ZpanPC6awzhx6SnHI-IVlsg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/160099-seared-ahi-tuna-steaks-DDMFS-4x3-26f4691e91bd434e9d96c1c601608cbc.jpg" alt="several medium rare seared tuna steaks are sliced on a blue and white platter.">
             </ol>
         </p>
+
+        <p>
+            <a href="../index.html">Return to the index</a>
+        </p>
     </body>
 </html>
