--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -72,5 +72,9 @@
                 <img src="https://www.allrecipes.com/thmb/lJKo8R_F8xfqyf_r5pWRMrHCu94=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" alt="a close up view on a plated slice of world famous lasagna.">
             </ol>
         </p>
+
+        <p>
+            <a href="../index.html">Return to the index</a>
+        </p>
     </body>
 </html>
