Restiled the Website, added links to GitHub in the Footer

--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Odin Recipes</title>
-    </head>
 
-    <body>
-        <h1>Odin Recipes</h1>
-        
-        <p><a href="./recipes/air-fryer-hamburgers.html">Air Fryer Hamburgers</a></p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
 
-        <p><a href="./recipes/grilled-cheese-sandwich.html">Grilled Cheese Sandwich</a></p>
+<body>
+    <h1 id="Title">Odin Recipes</h1>
+    <nav>
+        <ul id="recipe-list">
+            <li><a href="./recipes/air-fryer-hamburgers.html">Air Fryer Hamburgers</a></li>
+            <li><a href="./recipes/grilled-cheese-sandwich.html">Grilled Cheese Sandwich</a></li>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/seared-ahi-tuna-steaks.html">Seared Ahi Tuna Steaks</a></li>
+        </ul>
+    </nav>
+</body>
 
-        <p><a href="./recipes/lasagna.html">Lasagna</a></p>
+<footer>
+    <p>© 2024 My Website</p>
+    <p><a href="https://github.com/EmaCon15/odin-recipes">GitHub Repo of this WebSite</a></p>
+    <p><a href="https://github.com/EmaCon15">My GitHub Profile</a></p>
+</footer>
 
-        <p><a href="./recipes/seared-ahi-tuna-steaks.html">Seared Ahi Tuna Steaks</a></p>
-    </body>
 </html>
