--- a/recipes/grilled-cheese-sandwich.html
+++ b/recipes/grilled-cheese-sandwich.html
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Grilled Cheese Sandwich</title>
-    </head>
-    <body>
-        <h1>Grilled Cheese Sandwich</h1>
-        <img src="https://www.allrecipes.com/thmb/sUsXkXZkIi7SRlasL361wd8EJdU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2206436-d0018545bcb545b6b98c1a23659777cf.jpg" alt="Grilled cheese Sandwich image">
 
-        <h2>Description</h2>
-        <p>Learn how to make a grilled cheese sandwich in a nonstick pan with buttered bread and American Cheddar for a classic hot sandwich.</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grilled Cheese Sandwich</title>
+    <link rel="stylesheet" href="../style.css">
+</head>
 
-        <h2>Ingredients</h2>
-        <p>
-            <ul>
-                <li>4 slices white bread</li>
-                <li>3 tablespoons butter, divided</li>
-                <li>2 slices Cheddar cheese</li>
-            </ul>
-        </p>
+<body>
+    <h1 id="Title">Grilled Cheese Sandwich</h1>
+    <img class="recipe-image"
+        src="https://www.allrecipes.com/thmb/sUsXkXZkIi7SRlasL361wd8EJdU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2206436-d0018545bcb545b6b98c1a23659777cf.jpg"
+        alt="Grilled cheese Sandwich image">
 
-        <h2>Directions</h2>
-        <p>
-            <ol>
-                <li><strong>Step 1</strong></li>
-                <p>Preheat a nonstick skillet over medium heat. Generously butter one side of a slice of bread. Place bread butter-side down in the hot skillet; add 1 slice of cheese. Butter a second slice of bread on one side and place butter-side up on top of cheese.</p>
-                <li><strong>Step 2</strong></li>
-                <p>Cook until lightly browned on one side; flip over and continue cooking until cheese is melted. Repeat with remaining 2 slices of bread, butter, and slice of cheese.</p>
-            </ol>
-        </p>
+    <h2 id="description" class="subtitle">Description</h2>
+    <p>Learn how to make a grilled cheese sandwich in a nonstick pan with buttered bread and American Cheddar for a
+        classic hot sandwich.</p>
 
-        <p>
-            <a href="../index.html">Return to the index</a>
-        </p>
-    </body>
+    <h2 id="ingredients" class="subtitle">Ingredients</h2>
+    <ul>
+        <li>4 slices white bread</li>
+        <li>3 tablespoons butter, divided</li>
+        <li>2 slices Cheddar cheese</li>
+    </ul>
+
+    <h2 id="directions" class="subtitle">Directions</h2>
+    <ol>
+        <li class="recipe-step"><strong>Step 1</strong></li>
+        <p>Preheat a nonstick skillet over medium heat. Generously butter one side of a slice of bread. Place bread
+            butter-side down in the hot skillet; add 1 slice of cheese. Butter a second slice of bread on one side and
+            place butter-side up on top of cheese.</p>
+        <li class="recipe-step"><strong>Step 2</strong></li>
+        <p>Cook until lightly browned on one side; flip over and continue cooking until cheese is melted. Repeat with
+            remaining 2 slices of bread, butter, and slice of cheese.</p>
+    </ol>
+
+
+    <p>
+        <a class="back-link" href="../index.html">Return to the index</a>
+    </p>
+</body>
+
+<footer>
+    <p>© 2024 My Website</p>
+    <p><a href="https://github.com/EmaCon15/odin-recipes">GitHub Repo of this WebSite</a></p>
+    <p><a href="https://github.com/EmaCon15">My GitHub Profile</a></p>
+</footer>
+
 </html>
