--- a/recipes/air-fryer-hamburgers.html
+++ b/recipes/air-fryer-hamburgers.html
@@ -1,43 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Air Fryer Hamburgers</title>
-    </head>
-    <body>
-        <h1>Air Fryer Hamburgers</h1>
-        <img src="https://www.allrecipes.com/thmb/9q2dTuX10uIEoXCssLoy9lELbLg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/9447681-d7768711b16a49bdaca02c6be0d3007d.jpg" alt="Air fryer hamburger image">
-        
-        <h2>Description</h2>
-        <p>These air fryer hamburgers are perfect for when it's too cold to grill and you're craving a juicy burger! The butter and bouillon mixture gives these air fryer hamburger patties a dark grilled color and deep beefy flavor. Add your favorite seasonings, if desired, but these are delicious as is! If you'd like to add cheese, turn off the air fryer once the patties are done and let the residual heat melt the cheese. Make sure you use cold meat, straight from the fridge, for best results.</p>
 
-        <h2>Ingredients</h2>
-        <p>
-            <ul>
-                <li>1 pound 80% lean ground beef</li>
-                <li>2 tablespoons melted butter</li>
-                <li>1 tablespoon beef base (such as Better than Bouillon®)</li>
-                <li>freshly ground black pepper to taste</li>
-            </ul>
-        </p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Air Fryer Hamburgers</title>
+    <link rel="stylesheet" href="../style.css">
+</head>
 
-        <h2>Directions</h2>
-        <p>
-            <ol>
-                <li><strong>Step 1</strong></li>
-                <p>Preheat an air fryer to 400 degrees F (195 degrees C).</p>
-                <li><strong>Step 2</strong></li>
-                <p>Form beef into 4 patties, approximately 3/4 inches thick and 4 1/2 inches in diameter. Make the patties slightly bigger than the buns to allow for shrinkage.</p>
-                <li><strong>Step 3</strong></li>
-                <p>Whisk together warm melted butter and beef soup base in a small bowl. Brush lightly onto both sides of patties and season with pepper. Set patties into the air fryer basket. Depending on the size of your air fryer, you may need to cook them in batches.</p>
-                <li><strong>Step 4</strong></li>
-                <p>Air-fry patties for 7 minutes, flipping halfway through, for medium doneness. For well done, air-fry for an additional 2 minutes.</p>
-            </ol>
-        </p>
+<body>
+    <h1 id="Title">Air Fryer Hamburgers</h1>
+    <img class="recipe-image"
+        src="https://www.allrecipes.com/thmb/9q2dTuX10uIEoXCssLoy9lELbLg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/9447681-d7768711b16a49bdaca02c6be0d3007d.jpg"
+        alt="Air fryer hamburger image">
 
-        <p>
-            <a href="../index.html">Return to the index</a>
-        </p>
-    </body>
+    <h2 id="description" class="subtitle">Description</h2>
+    <p>These air fryer hamburgers are perfect for when it's too cold to grill and you're craving a juicy burger! The
+        butter and bouillon mixture gives these air fryer hamburger patties a dark grilled color and deep beefy flavor.
+        Add your favorite seasonings, if desired, but these are delicious as is! If you'd like to add cheese, turn off
+        the air fryer once the patties are done and let the residual heat melt the cheese. Make sure you use cold meat,
+        straight from the fridge, for best results.</p>
+
+    <h2 id="ingredients" class="subtitle">Ingredients</h2>
+    <ul>
+        <li>1 pound 80% lean ground beef</li>
+        <li>2 tablespoons melted butter</li>
+        <li>1 tablespoon beef base (such as Better than Bouillon®)</li>
+        <li>freshly ground black pepper to taste</li>
+    </ul>
+
+    <h2 id="directions" class="subtitle">Directions</h2>
+    <ol>
+        <li class="recipe-step"><strong>Step 1</strong></li>
+        <p>Preheat an air fryer to 400 degrees F (195 degrees C).</p>
+        <li class="recipe-step"><strong>Step 2</strong></li>
+        <p>Form beef into 4 patties, approximately 3/4 inches thick and 4 1/2 inches in diameter. Make the patties
+            slightly bigger than the buns to allow for shrinkage.</p>
+        <li class="recipe-step"><strong>Step 3</strong></li>
+        <p>Whisk together warm melted butter and beef soup base in a small bowl. Brush lightly onto both sides of
+            patties and season with pepper. Set patties into the air fryer basket. Depending on the size of your air
+            fryer, you may need to cook them in batches.</p>
+        <li class="recipe-step"><strong>Step 4</strong></li>
+        <p>Air-fry patties for 7 minutes, flipping halfway through, for medium doneness. For well done, air-fry for an
+            additional 2 minutes.</p>
+    </ol>
+
+    <p>
+        <a href="../index.html" class="back-link">Return to the index</a>
+    </p>
+</body>
+
+<footer>
+    <p>© 2024 My Website</p>
+    <p><a href="https://github.com/EmaCon15/odin-recipes">GitHub Repo of this WebSite</a></p>
+    <p><a href="https://github.com/EmaCon15">My GitHub Profile</a></p>
+</footer>
+
 </html>
